<resources>
    <string name="app_name">Foodjournal</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_grocerylist">Grocery list</string>
    <string name="title_calendar">Calendar</string>

    <string name="login_text">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_to_signup_button">Don\'t have an account? Sign up</string>
    <string name="description">Description</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="signup_text">Sign up</string>
    <string name="signup_username">Choose a username</string>
    <string name="signup_password">Choose a password</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_to_login_button">Already have an account? Login</string>
    <string name="ingredient">Ingredient</string>
    <string name="add_recipe">Add recipe</string>
    <string name="amount">Amount</string>
    <string name="zero">0</string>
    <string name="step1">Step 1</string>
    <string name="addstep">Add step</string>
    <string name="preptime">Prep time</string>
    <string name="cooktime">Cook time</string>
    <string name="calories">Calories</string>
    <string name="servings">Servings</string>
    <string name="title">Title</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dairyfree">Dairy free</string>
    <string name="glutenfree">Gluten free</string>
    <string name="forward">NEXT</string>
    <string name="back">PREV</string>
    <string name="errorMessage">Error</string>
</resources>