<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view6"
        android:layout_width="408dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LoginSignupButtonID"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:background="@color/blue"
        android:text="@string/login_to_signup_button"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="368dp"
        android:layout_height="447dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="290dp"
        android:layout_height="239dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/LoginTextID"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LoginUsernameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/LoginUsernameAreaID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/LoginPasswordID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/LoginPasswordAreaID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/LoginButtonID"
        android:layout_width="295dp"
        android:layout_height="58dp"
        android:background="@color/lightgreen"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>